--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   </main>
 
   <script src="./scripts/factories/photographer.js"></script>
+  <script src="./scripts/api/api.js"></script>
   <script src="./scripts/pages/index.js"></script>
 
+  
 </body>
 
 </html>
