--- a/photographer.html
+++ b/photographer.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+<html lang="fr">
+
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Fisheye - portfolio photographe" />
+
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Fisheye - photographe</title>
+</head>
+
+<body>
+  <header>
+    <a href="index.html" aria-label="Fisheye">
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+    </a>
+  </header>
+  <main id="main-photographer" aria-hidden="false">
+    <div class="photograph-header"></div>
+    <div class="wrapper_select">
+      <div class="select_title" id="trie_label">Trier par :</div>
+      <div class="select_list">
+        <button class="select_button" id="select_button" aria-haspopup="listbox" aria-labelledby="trie_label"
+          aria-expanded="false">
+          <div class="pseudo_value">Popularité</div>
+        </button>
+      </div>
+    </div>
+    <section class="achievements_section" aria-hidden="false"></section>
+  </main>
       </div>
     </main>
     <div id="contact_modal">
 			<div class="modal">
 				<header>
+        
           <h2>Contactez-moi</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
+  
 				<form>
 					<div>
 						<label>Prénom</label>
@@ -31,7 +53,12 @@
 				</form>
 			</div>
 		</div>
+
+    <script src="/scripts/factories/photographer.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
+    <script src="./scripts/api/api.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/utils/getId.js"></script>
+    
   </body>
 </html>
