ajout de script

--- a/photographer.html
+++ b/photographer.html
@@ -71,9 +71,12 @@
   <script src="./scripts/api/api.js"></script>
 
   <script src="/scripts/factories/photographer.js"></script>
+  <script src="/scripts/factories/portfolio.js"></script>
+
   <script src="/scripts/pages/photographer.js"></script>
 
   <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/utils/generateMedia.js"></script>
   <script src="/scripts/utils/getId.js"></script>
 
 </body>
