màj gallery-section

--- a/photographer.html
+++ b/photographer.html
@@ -33,7 +33,7 @@
         </button>
       </div>
     </div>
-    <section class="achievements_section" aria-hidden="false"></section>
+    <section class="gallery-section" aria-hidden="false"></section>
   </main>
 
   <!-- Modale de contact  -->
