màj des scripts

--- a/photographer.html
+++ b/photographer.html
@@ -68,7 +68,6 @@
     </div>
   </div>
 
-  <script src="./scripts/api/api.js"></script>
 
   <script src="/scripts/factories/photographer.js"></script>
   <script src="/scripts/factories/portfolio.js"></script>
@@ -78,6 +77,7 @@
   <script src="/scripts/utils/contactForm.js"></script>
   <script src="/scripts/utils/generateMedia.js"></script>
   <script src="/scripts/utils/getId.js"></script>
+  <script src="/scripts/utils/like.js"></script>
 
 </body>
 
