--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </main>
 
   <script src="./scripts/factories/photographer.js"></script>
+  <script src="./scripts/factories/api.js"></script>
   <script src="./scripts/pages/index.js"></script>
 
   
