--- a/photographer.html
+++ b/photographer.html
@@ -68,6 +68,7 @@
     </div>
   </div>
 
+  <script src="./scripts/factories/api.js"></script>
 
   <script src="/scripts/factories/photographer.js"></script>
   <script src="/scripts/factories/portfolio.js"></script>
