màj de l'accessibilité

--- a/photographer.html
+++ b/photographer.html
@@ -16,10 +16,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- On définit le titre de la page -->  
+  <!-- On définit le titre de la page -->
   <title>Fisheye - photographe</title>
-</head> 
+</head>
 <!-- Fin de la partie head -->
+
 <body>
   <header>
     <!-- Lien vers la page d'accueil avec l'accessibilité -->
@@ -93,20 +94,20 @@
   <div class="lightbox-photographer" aria-hidden="true">
     <span class="fa-solid fa-xmark" onclick="closelightbox()" aria-hidden="true" title="close lightbox"></span>
     <!-- Liste pour afficher les images de la lightbox -->
-    <ul class="lightbox" aria-label="Our selection of Recipes" id="lightbox-list"></ul>
+    <ul class="lightbox" aria-label="Our Photographer's image selection" id="lightbox-list"></ul>
   </div>
   <!-- Chargement des scripts JavaScript -->
   <script src="./scripts/factories/lightbox.js"></script>
   <script src="./scripts/factories/photographer.js"></script>
   <script src="./scripts/factories/portfolio.js"></script>
-  
+
   <script src="./scripts/utils/form.js"></script>
   <script src="./scripts/utils/getId.js"></script>
   <script src="./scripts/utils/media.js"></script>
   <script src="./scripts/utils/like.js"></script>
   <script src="./scripts/utils/menu.js"></script>
   <script src="./scripts/utils/sort.js"></script>
-  
+
   <script src="./scripts/pages/photographer.js"></script>
 </body>
 
